--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ SoftwareDesign.pdf
 week8/LAB_08_sort_final_nefi melgar.py
 week10/numerical_sequence_final.py
 week13/prime_numbers_FINAL.py
+week7/FInalExam_NefiMelgar.pdf
